next-demo/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-demo
  namespace: next-demo
spec:
  selector:
    app: next-demo
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 80
