next-demo/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "next-demo-letsencrypt-prod"
  name: next-demo-ingress
  namespace: next-demo
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - demo.kyungsu.com
    secretName: next-demo-tls
  rules:
  - host: demo.kyungsu.com
    http:
      paths:
      - backend:
          service:
            name: next-demo
            port:
              number: 8084
        path: /
        pathType: Prefix
